--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://github.com/Wfelipe35/Curso_dsmovie">/Lipetrevian</a>
+            <div class="dsmovie-contact-container">
+                <img src="img/github-mark-white.svg" alt="Github" style="width: 20px;">
+                <a href="https://github.com/Wfelipe35/Curso_dsmovie">/Lipetrevian</a>
+            </div>
         </nav>
     </header>
 </body>
