--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
             </div>
         </nav>
     </header>
+
+
+    <main>
+        <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-card">
+                <img src="https://media.themoviedb.org/t/p/w533_and_h300_bestv2/dQOphbONxlpPsKo30araFr0CYMO.jpg" alt=" the witcher" srcset="">
+                <div class="dsmovie-card-description">
+                    <h3>THe Witcher</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
