--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
                     <img src="https://media.themoviedb.org/t/p/w533_and_h300_bestv2/dQOphbONxlpPsKo30araFr0CYMO.jpg" alt=" the witcher" srcset="">
                     <div class="dsmovie-card-description">
                         <h3>THe Witcher</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-bottom">
+                            <h4>3.8</h4>
+                            <div>
+                                <img src="./img/star-full.svg" alt="Star">
+                                <img src="./img/star-full.svg" alt="Star">
+                                <img src="./img/star-full.svg" alt="Star">
+                                <img src="./img/star-meia.svg" alt="Star">
+                                <img src="./img/star-vazia.svg" alt="Star">
+                            </div>
+                            <p>10 avaliações</p>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                        
                     </div>
                 </div>
                 </div> 
